--- a/projekt_zespolowy/Views/Shared/_Layout.cshtml
+++ b/projekt_zespolowy/Views/Shared/_Layout.cshtml
@@ -62,6 +62,9 @@
                 <a asp-controller="Reports" asp-action="Index" class="list-group-item list-group-item-action list-group-item-light p-3">
                     <i class="fas fa-chart-pie me-3" style="width: 20px;"></i>Raporty
                 </a>
+                <a asp-controller="Market" asp-action="Index" class="list-group-item list-group-item-action list-group-item-light p-3">
+                    <i class="fas fa-chart-line me-3" style="width: 20px;"></i>Rynek i Waluty
+                </a>
                 <a asp-controller="Edukacja" asp-action="Index" class="list-group-item list-group-item-action list-group-item-light p-3">
                     <i class="fas fa-graduation-cap me-3" style="width: 20px;"></i>Edukacja
                 </a>
