--- a/projekt_zespolowy/Views/Shared/_Layout.cshtml
+++ b/projekt_zespolowy/Views/Shared/_Layout.cshtml
@@ -127,6 +127,13 @@
             <div class="container-fluid p-4">
                 @RenderBody()
             </div>
+
+            <footer class="app-footer border-top bg-body-tertiary">
+                <div class="container-fluid px-4 py-3 d-flex flex-column flex-md-row justify-content-between align-items-center">
+                    <span class="text-body-secondary small">© @DateTime.Now.Year SmartBudget</span>
+                    <span class="text-body-secondary small">KOZN25FIN</span>
+                </div>
+            </footer>
         </div>
     </div>
 
